# webster

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  httpd.c  main.c  nvs.c  ota.c  usb.c  version.cmake  wifi.c
main/www-data/: config.html  index.html.in
